--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettify": "prettier --write src/**/*.{ts,tsx,scss,html}"
   },
   "eslintConfig": {
     "extends": [
