--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
     "clsx": "^1.2.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slider": "^1.3.1",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3"
